# install-rye

./: README.md  action.yaml  pyproject.toml  ruff.toml
.github/workflows/: check.yaml  windows.yaml
src/action/: check.py  check.sh  define.py  define.sh  install.py  install.sh  merge.py  prepare.py  prepare.sh  setup.py  setup.sh
